# Axilex

./: .gitignore  BUILD.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  README.md  RENDERER_IMPLEMENTATION.md  main.py  requirements.txt
cad_pilot/: exporter.py  parser.py  transformer.py
cad_pilot/core/: geometry.py  scene.py
cad_pilot/renderer/: gui_renderer.py  launcher.py  lightweight_renderer.py  render_process.py  terminal_renderer.py
cad_pilot/renderer/ui/: colors.py  hold_button.py  launcher.py  pyvista_widget.py
docs/: FEATURE_MATRIX.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  KRYSTAL_SPEC_MINIMAL.md  KRYSTAL_SPEC_TRAINING.md  LANGUAGE_REFERENCE.md  QUICK_REFERENCE.md  language_spec.md
examples/: advanced_example.cadp  complete_language_demo.cadp  constraints_example.cadp  error_handling_demo.cadp  hello_krystal.krystal  module_test.cadp  renderer_test.krystal  simple_box.cadp
krystal-parser/: Cargo.toml  README.md  test_parse.rs  test_simplifier.rs
krystal-parser/src/: ast.rs  krystal.pest  lib.rs  parser.rs  simplifier.rs
krystal-renderer/: Cargo.toml  README.md
krystal-renderer/src/: camera.rs  constraints.rs  geometry.rs  main.rs  scene.rs  ui.rs
